#
# Copyright 2015-2016 Intel, Inc. All rights reserved
#
# $COPYRIGHT$
#
# Additional copyrights may follow
#
# $HEADER$
#

include_HEADERS = \
        ww.h

include_wwdir = $(includedir)

include_ww_autogendir = $(includedir)/autogen
include_ww_autogen_HEADERS = \
            autogen/ww_config_top.h \
            autogen/ww_config_bottom.h
nodist_include_ww_autogen_HEADERS = \
            autogen/config.h
